# encode2026-hackathon-public

./: .gitignore  README.md
backend/: .env.example  example_output.md  example_output_1.md  example_output_2.md  example_output_3.md  main.py  pyproject.toml  server.py  test_input.txt
backend/mcptools/: apiserver.py
backend/modelmanager/: modelfactory.py
backend/ocr/: extractor.py
backend/prompts/: keyword_extract_prompt.txt  system_prompt.txt  system_prompt_bak.txt
backend/tests/: FitnessFocusedUser.py  GenAITest.py  HealthConciousUser.py  IllUser.py  Judge.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: index.css
frontend/src/components/: AppShell.tsx  ArtifactCard.tsx  BarcodeScannerModal.tsx  ChatStream.tsx  Composer.tsx  DropOverlay.tsx  EmptyState.tsx  SidebarHistory.tsx
frontend/src/lib/: api.ts
frontend/src/stores/: conversationStore.ts
frontend/src/types/: barcode.d.ts  index.ts
